product_docs/docs/pgbouncer/1.0/01_installation/01_installing_pgbouncer_on_a_linux_or_centos_host.mdx
---
title: "Installing PgBouncer on a CentOS Host"
---

<div id="installing_on_CentOS" class="registered_link"></div>


Before installing the repository configuration, you must have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Follow the steps given below to install PgBouncer:

1.  To install the repository configuration, assume superuser privileges and invoke one of the following platform-specific commands:

    On CentOS 6 and 7:

    ``` text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On CentOS 8:

    ``` text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` in the following command with the username and password of a registered EnterpriseDB user:

    ``` text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing PgBouncer, execute the following command to install the Extra Packages for Enterprise Linux (EPEL) release package:

    On CentOS 6:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm

    sed -i "s@^#baseurl=@baseurl=@;s@^mirrorlist=@#mirrorlist=@" /etc/yum.repos.d/epel.repo
    ```

    On CentOS 6, you need to install SCL repository:

    ``` text
    yum -y install centos-release-scl
    ```

    On CentOS 7:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On CentOS 8:

    ``` text
    dnf -y install epel-release
    ```

4.  For CentOS 8, enable the PowerTools repository to satisfy EPEL package dependencies:

    ``` text
    dnf config-manager --set-enabled PowerTools
    ```

5.  For CentOS 8, disable the built-in PostgreSQL module:

    ``` text
    dnf -qy module disable postgresql
    ```

6.  Use the following platform-specific command to install PgBouncer:

    On CentOS 6 and 7:

    ``` text
    yum -y install edb-pgbouncer<xx>
    ```

    Where &lt;xx&gt; is the PgBouncer version you want to install.

    On CentOS 8:

    ``` text
    dnf -y install edb-pgbouncer<xx>
    ```

    Where &lt;xx&gt; is the PgBouncer version you want to install.

    To install PgBouncer 1.14.0.1 on CentOS 8, the command is:

    ``` text
    dnf -y install edb-pgbouncer114
    ```

    When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

    During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve. PgBouncer will be installed in the `/usr/edb/pgbouncer<x.x>` directory.

<div id="installing_on_RHEL" class="registered_link"></div>

## `Installing PgBouncer on a RHEL Host`

Before installing the repository configuration, you must have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Follow the steps given below to install PgBouncer:

1.  To install the repository configuration, assume superuser privileges and invoke one of the following platform-specific commands:

    On RHEL 6 and 7:

    ``` text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On RHEL 8:

    ``` text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` in the following command with the username and password of a registered EnterpriseDB user:

    ``` text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing PgBouncer, execute the following command to install the Extra Packages for Enterprise Linux (EPEL) release package:

    On RHEL 6:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-6.noarch.rpm

    sed -i "s@^#baseurl=@baseurl=@;s@^mirrorlist=@#mirrorlist=@" /etc/yum.repos.d/epel.repo
    ```

    On RHEL 6, you need to install SCL repository:

    ``` text
    yum -y install centos-release-scl
    ```

    On RHEL 7:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On RHEL 8:

    ``` text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable the repository:

    On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy EPEL package dependencies:

    ``` text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

    On RHEL 8, enable the `codeready-builder-for-rhel-8-*-rpms` repository to satisfy EPEL packages dependency:

    ``` text
    ARCH=$( /bin/arch )

    subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  For RHEL 8, disable the built-in PostgreSQL module:

    ``` text
    dnf -qy module disable postgresql
    ```

6.  Use the following platform-specific command to install PgBouncer:

    On RHEL 6 and 7:

    ``` text
    yum -y install edb-pgbouncer<xx>
    ```

    Where &lt;xx&gt; is the PgBouncer version you want to install.

    On RHEL 8:

    ``` text
    dnf -y install edb-pgbouncer<xx>
    ```

    Where &lt;xx&gt; is the PgBouncer version you want to install.

    To install PgBouncer 1.14.0.1 on RHEL 8, the command is:

    ``` text
    dnf -y install edb-pgbouncer114
    ```

    When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

> During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve. PgBouncer will be installed in the `/usr/edb/pgbouncer<x.x>` directory.

<div id="installing_on_ppcle" class="registered_link"></div>

## `Installing PgBouncer on a RHEL/CentOS 7 PPCLE Host`

Before installing the repository configuration, you must have credentials that allow access to the EnterpriseDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install PgBouncer on a RHEL/CentOS 7 PPCLE Host:

1.  Install Advance Toolchain:

    ``` text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF

    # Begin of configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of configuration file
    EOF
    ```

2.  To install the repository configuration, assume superuser privileges and invoke the following command:

> ``` text
> yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
> ```

1.  Replace the `USERNAME:PASSWORD` in the following command with the username and password of a registered EnterpriseDB user:

    ``` text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

2.  Before installing PgBouncer, execute the following command to install the Extra Packages for Enterprise Linux (EPEL) release package:

    ``` text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

3.  On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy EPEL package dependencies:

    ``` text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

4.  Invoke the following command to install PgBouncer:

    ``` text
    yum -y install edb-pgbouncer<xx>
    ```

    Where &lt;xx&gt; is the PgBouncer version you want to install.

    When you install an RPM package that is signed by a source that is not recognized by your system, yum may ask for your permission to import the key to your local server. If prompted, and you are satisfied that the packages come from a trustworthy source, enter `y`, and press `Return` to continue.

    During the installation, yum may encounter a dependency that it cannot resolve. If it does, it will provide a list of the required dependencies that you must manually resolve. PgBouncer will be installed in the `/usr/edb/pgbouncer<x.x>` directory.
